# ChangeLog for games-fps/rtcw
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/rtcw/ChangeLog,v 1.5 2003/12/06 22:13:58 wolf31o2 Exp $

  06 Dec 2003; Chris Gianelloni <wolf31o2@gentoo.org> rtcw-1.41.ebuild:
  Added RESTRICT=nomirror.  Closing Bug #35223.

*rtcw-1.41 (03 Oct 2003)

  03 Oct 2003; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
  rtcw-1.41.ebuild, files/wolf, files/wolf-ded, files/wolf-ded.rc:
  Adding check_license (missed it earlier).

  03 Oct 2003; Chris Gianelloni <wolf31o2@gentoo.org> files/wolf,
  files/wolf-ded, files/wolf-ded.rc:
  Add back into portage.  Add check_license function.

  06 Aug 2003; Chris Gianelloni <wolf31o2@gentoo.org> rtcw-1.41.ebuild:
  Making sure icon pixmap is put in /usr/share/pixmaps for the .desktop entry

  05 Aug 2003; Chris Gianelloni <wolf31o2@gentoo.org> rtcw-1.41.ebuild:
  Fixed my bad spelling

  16 Jul 2003; Chris Gianelloni <wolf31o2@gentoo.org> rtcw-1.41.ebuild,
  files/wolf-ded, files/wolf-ded.rc, files/wolfded, files/wolfded.rc,
  files/wolfmp, files/wolfsp:
  Add support for unpack_makeself, USE=dedicated, Gnome/KDE .desktop entries,
  and rename dedicated files to match dedicated scheme

*rtcw-1.41 (07 Jul 2003)

  07 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by
  Chris Gianelloni <wolf31o2@hotmail.com>
  Frederic Mangeant <frederic.mangeant@free.fr>
  #22151 #22626.