@@ -1,5 +1,5 @@
-MD5 db4f17c40a30325d0c69345e3b970144 rtcw-1.41.ebuild 2387
-MD5 d3afb311e73c5bde93e2451abc06376a ChangeLog 1475
+MD5 fda4396342d04985a5aa518f85aafed1 rtcw-1.41.ebuild 2677
+MD5 d29635fb68d47879887583b80f781678 ChangeLog 1614
 MD5 1a77de647b19faf58f4561b4b22e675d metadata.xml 1053
 MD5 3d58eca1ff127b6845b7aa8c1ec0f0bc files/wolf 43
 MD5 1dd73682e5f57e52fdb60c26854ba13e files/digest-rtcw-1.41 150
